--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-network-api",
   "version": "1.0.0",
   "description": "Mod 18 Challenge",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
